--- a/index.html
+++ b/index.html
@@ -9,26 +9,31 @@
         @import url('https://fonts.googleapis.com/css?family=Roboto+Slab|Oswald:400,700');
 
         body {
-            font-family: 'Roboto Slab', serif;
-            background: black;
-            color: white;
-            margin: 0;
-            padding: 0;
+             font-family: Roboto Slab;
+  background: black;
+  color: white;
+  height: 100%;
+  width: 100%;
         }
 
         /* NAVBAR */
         .navigation {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            height: 45px;
-            text-align: center;
-            padding-right: 75px;
-            z-index: 1;
-            box-shadow: 0 0 2px #000;
-            background-color: rgba(1, 1, 1, 0.7);
-            color: #fff;
-        }
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  height: 45px;
+  text-align: center;
+  padding-top: 0px;
+  padding-right: 75px;
+  z-index: 1;
+        /* SHADOW */
+  -webkit-box-shadow: 0px 0px 2px 0px   #000000;
+  -moz-box-shadow: 0px 0px 2px 0px       #000000;
+  box-shadow: 0px 0px 2px 0px #000000;
+  /* TRANSPARENCY */
+  background-color: rgba(1, 1, 1,       0.7);
+  color: rgba(1, 1, 1, 0.7);
+}
 
         .navigation a {
             font-size: 16px;
