--- a/index.html
+++ b/index.html
@@ -98,24 +98,32 @@
 
         /* ABOUT ME */
         #aboutme {
-            padding: 50px 75px;
-            background: black;
-            color: white;
+            margin-top: 5px;
+  margin-bottom: 100px;
+  background: black;
+  color: white;
+  margin-left: 75px;
+  margin-right: 75px;
         }
 
         /* PORTFOLIO */
         #portfolio {
             background: #f5f5f5;
-            color: #55606A;
-            padding: 50px 90px 100px 90px;
+  color: #55606A;
+  padding-left: 90px;
+  padding-right: 90px;
+  padding-top: 50px;
+  padding-bottom: 100px;
+  margin-top: 0px;
         }
 
         /* FOOTER */
         #footer {
-            background: #fff;
-            color: #55606A;
-            padding: 50px 0 35px 0;
-            text-align: center;
+             background: #ffffff;
+  color: #55606A;
+  padding-top: 50px;
+  padding-bottom: 35px;
+  text-align: center;
         }
 
         h1,
