--- a/index.html
+++ b/index.html
@@ -9,31 +9,26 @@
         @import url('https://fonts.googleapis.com/css?family=Roboto+Slab|Oswald:400,700');
 
         body {
-             font-family: Roboto Slab;
-  background: black;
-  color: white;
-  height: 100%;
-  width: 100%;
+            font-family: 'Roboto Slab', serif;
+            background: black;
+            color: white;
+            margin: 0;
+            padding: 0;
         }
 
         /* NAVBAR */
         .navigation {
-  position: fixed;
-  top: 0px;
-  width: 100%;
-  height: 45px;
-  text-align: center;
-  padding-top: 0px;
-  padding-right: 75px;
-  z-index: 1;
-        /* SHADOW */
-  -webkit-box-shadow: 0px 0px 2px 0px   #000000;
-  -moz-box-shadow: 0px 0px 2px 0px       #000000;
-  box-shadow: 0px 0px 2px 0px #000000;
-  /* TRANSPARENCY */
-  background-color: rgba(1, 1, 1,       0.7);
-  color: rgba(1, 1, 1, 0.7);
-}
+            position: fixed;
+            top: 0;
+            width: 100%;
+            height: 45px;
+            text-align: center;
+            padding-right: 75px;
+            z-index: 1;
+            box-shadow: 0 0 2px #000;
+            background-color: rgba(1, 1, 1, 0.7);
+            color: #fff;
+        }
 
         .navigation a {
             font-size: 16px;
@@ -98,32 +93,24 @@
 
         /* ABOUT ME */
         #aboutme {
-            margin-top: 5px;
-  margin-bottom: 100px;
-  background: black;
-  color: white;
-  margin-left: 75px;
-  margin-right: 75px;
+            padding: 50px 75px;
+            background: black;
+            color: white;
         }
 
         /* PORTFOLIO */
         #portfolio {
             background: #f5f5f5;
-  color: #55606A;
-  padding-left: 90px;
-  padding-right: 90px;
-  padding-top: 50px;
-  padding-bottom: 100px;
-  margin-top: 0px;
+            color: #55606A;
+            padding: 50px 90px 100px 90px;
         }
 
         /* FOOTER */
         #footer {
-             background: #ffffff;
-  color: #55606A;
-  padding-top: 50px;
-  padding-bottom: 35px;
-  text-align: center;
+            background: #fff;
+            color: #55606A;
+            padding: 50px 0 35px 0;
+            text-align: center;
         }
 
         h1,
@@ -214,6 +201,7 @@
         .img-responsive {
             width: 100%;
             height: auto;
+            object-fit: cover;
         }
 
         /* SOCIAL ICONS */
