--- a/index.html
+++ b/index.html
@@ -6,71 +6,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
-        @import url('https://fonts.googleapis.com/css?family=Roboto+Slab|Oswald:400,700');
+      @import url(https://fonts.googleapis.com/css?family=Roboto+Slab);
 
-        body {
-            font-family: 'Roboto Slab', serif;
-            background: black;
-            color: white;
-            margin: 0;
-            padding: 0;
-        }
+@import url(https://fonts.googleapis.com/css?family=Oswald:400,700);
 
-        /* NAVBAR */
-        .navigation {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            height: 45px;
-            text-align: center;
-            padding-right: 75px;
-            z-index: 1;
-            box-shadow: 0 0 2px #000;
-            background-color: rgba(1, 1, 1, 0.7);
-            color: #fff;
-        }
+html { 
+}
 
-        .navigation a {
-            font-size: 16px;
-            padding: 8px 15px;
-            color: #fff;
-            text-decoration: none;
-        }
+body {
+  font-family: Roboto Slab;
+  background: black;
+  color: white;
+  height: 100%;
+  width: 100%;
+}
 
-        .navigation ul {
-            margin-top: 12px;
-            padding: 0;
-        }
+/* NAVBAR */
+.navigation {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  height: 45px;
+  text-align: center;
+  padding-top: 0px;
+  padding-right: 75px;
+  z-index: 1;
+  /* SHADOW */
+  -webkit-box-shadow: 0px 0px 2px 0px   #000000;
+  -moz-box-shadow: 0px 0px 2px 0px       #000000;
+  box-shadow: 0px 0px 2px 0px #000000;
+  /* TRANSPARENCY */
+  background-color: rgba(1, 1, 1,       0.7);
+  color: rgba(1, 1, 1, 0.7);
+}
 
-        .navigation ul li {
-            list-style-type: none;
-            display: inline;
-        }
+.navigation a {
+  font-size: 16px;
+  padding-top: 8px;
+  padding-left: 15px;
+  padding-right: 15px;
+  color: #FFFFFF;
+  text-decoration: none;
+}
 
-        .navigation li:before {
-            content: " | ";
-            color: #fff;
-        }
+.navigation ul
+{
+    margin-top: 12px;
+}
 
-        .navigation li:first-child:before {
-            content: none;
-        }
+.navigation ul li
+{
+    list-style-type: none;
+    display: inline;
+}
 
-        .navigation li a:hover {
-            color: #ccc;
-            font-weight: 600;
-        }
+.navigation li:before {
+  content: " | ";
+  color: #fff;
+}
 
-        /* HEADER */
-        #header {
-            text-align: center;
-            background: url('http://joelstephenson.com/images/bg2.jpg') no-repeat center center;
-            background-size: cover;
-            height: 100vh;
-            position: relative;
-        }
+.navigation li:first-child:before {
+content: none;
+}
 
-        #welcome {
+.navigation li a:hover {
+  color: #CCCCCC;
+  font-weight: 600;
+}
+
+/* HEADER DIV */
+#header {
+  text-align: center;
+  
+}
+
+#welcome {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -265,7 +275,6 @@ a:hover {
         font-size:30px;
     }
 }
-
 
     </style>
 </head>
